--- a/makefile-demo/makefile
+++ b/makefile-demo/makefile
@@ -33,6 +33,7 @@ $(CUR_OBJS):%.o:%.c
 # makefile中
 #	$@表示最终文件，$^表示依赖文件
 #	$(CUR_OBJS):%.o:%.c表示文件集中匹配%.o的做最终文件，并且最终文件后缀.o换成.c,作为最终文件的依赖文件。
+# 	CC变量中，值为gcc表示编译c文件，值为g++表示编译cpp文件
 #
 # gcc的标志位
 #	-o 指明输出文件名，如果不使用该参数，则输出文件名为默认值
